fix(#14): touc highlights on mobile
Moving user-touch from global to home allowed text to be
highlighted on header section

--- a/gitpen/src/app/header/header.component.scss
+++ b/gitpen/src/app/header/header.component.scss
@@ -136,6 +136,13 @@ li {
   }
 }
 
+* {
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+}
+
 @media (min-width: 768px) {
   .overlay {
     position: fixed;
